# swarmkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  justfile  llms.txt  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: design-lookup.md  schema-validator.md
.claude/commands/: design.md  validate.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml
code-review/: workspace.yaml
code-review/archetypes/: code-quality.yaml  security.yaml
code-review/skills/: code-diff-read.yaml  code-quality-check.yaml  review-summary-write.yaml  security-vulnerability-scan.yaml
code-review/topologies/: review.yaml
deploy/control-plane/: Caddyfile  Dockerfile  Dockerfile.ui  README.md  SECURITY-REVIEW.md  docker-compose.yml
deploy/fleet/: .env.example  README.md  docker-compose.yml  enroll.py
deploy/observability/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
design/: IMPLEMENTATION-PLAN.md  README.md  Swael-Design-v0.6.md  SwarmKit-Design-v0.6.docx  SwarmKit-Design-v0.6.md
design/details/: README.md  _template.md  adk-lessons.md  archetype-schema-v1.md  artifact-env-substitution.md  canary-deployments.md  ci-pipeline.md  cli-unimplemented-stubs.md  composer-pluggable-artifact-types.md  configurable-synthesis-roles.md  constrained-output-schema.md  context-compression.md  contract-registry.md  dag-dependency-graph.md  decision-skills.md  distributed-architecture.md  document-reader-mcp.md  document-writer-pattern.md  eval-harness.md  executor-abstraction.md  executor-container-sandbox.md  executor-declarative-adapters-plan.md  executor-input-escalation-plan.md  executor-mcp-gateway.md  executor-p2-plan.md  executor-relay-plan.md  executor-trust-accrual-plan.md  fleet-compose.md  fleet-control-plane.md  fleet-run-graph.md  gate-funnel.md  governance-decision-skills.md  harness-reviewer.md  hello-swarm-example.md  human-interaction-model.md  installable-expertise-packages.md  knowledge-curator-topology.md  knowledge-curator.md  knowledge-mcp-server.md  knowledge-pack-cli.md  (+52 more)
design/details/control-plane/: 00-index.md  01-runtime-core.md  02-serve-api.md  03-provider-seams.md  04-persistence-state.md  05-identity-governance-iam.md  06-observability-eval.md  07-schema.md  08-cli.md  09-ui.md  10-capability-map.md  11-architecture.md  12-auth.md  13-connector-registry.md  14-aggregation.md  15-artifact-registry.md  16-fleet-ui.md  17-growth-loop.md  18-hardening-rollout.md  19-fleet-enrollment-protocol.md  20-manage-and-adopt.md  21-fleet-identity.md  22-signed-pushes.md  23-usage-pull-on-sync.md  24-instance-scoped-observability.md  25-ui-trace-deeplink.md  26-fleet-canary.md  IMPLEMENTATION.md
design/details/runtime/: otel-trace-export.md  usage-recording-and-cost.md
docker/mcp-sandbox/: Dockerfile
docs/: README.md  blog-intent-drift.md  blog-swarmkit-deep-dive.md  launch-post.md  linkedin-post.md  migration-guide.md  reddit-post.md  reddit-v1.2-post.md  slack-post.md
docs/examples/: memory-demo.py  rynko-output-validator.yaml
docs/examples/gates/: code-analysis.json  sterling-findings.json
docs/guides/: authoring-harness-adapters.md  model-selection.md  serve-auth.md  sterling-oms-workspace.md
docs/notes/: README.md  harness-adapters.md  llm-friendly-knowledge.md  observability.md  orchestration-pause-model.md  production-storage-model.md  schema-change-discipline.md  usability-first.md
docs/reference/: canary-deployments.md  serve-cli-tests.md  workspace-memory.md
docs/reviews/: 2026-07-control-plane-and-runtime-review.md  2026-07-fix-plan.md
docs/site/: index.md
docs/site/architecture/: design-overview.md  implementation-plan.md
examples/: README.md
examples/configurable-synthesis-roles/: README.md  workspace.yaml
examples/hello-swarm/: README.md
examples/minder/: .env.example  .gitignore  Dockerfile  alert_bus.py  bot.py  discord_bot.py  docker-compose.yml  entrypoint.sh  ha-init.sh  test_alert_bus.py  test_bot_resilience.py  test_channels.py  test_discord_alert.py
examples/multimodal-test/: workspace.yaml
examples/rynko-content/: README.md
examples/sdlc-pipeline/: README.md  demo_consolidated_design.py  demo_oms_stage_run.py  demo_pipeline_controller.py  demo_pipeline_temporal.py  demo_pipeline_trigger.py  validate_library.py
examples/sterling-oms/: README.md
examples/vedanta-advisor/: .env.sample  README.md  TODO.md
reference/: README.md  workspace.yaml
reference/archetypes/: artifact-publisher.yaml  artifact-validator.yaml  authoring-supervisor.yaml  code-analyst.yaml  conversation-leader.yaml  engineering-leader.yaml  github-reader.yaml  knowledge-searcher.yaml  llm-judge.yaml  ops-leader.yaml  qa-leader.yaml  schema-drafter.yaml  security-reviewer.yaml  supervisor-leader.yaml  test-analyst.yaml  test-writer.yaml
reference/skills/: audit-log-write.yaml  citation-checker.yaml  code-quality-review.yaml  deploy-risk-review.yaml  gate-validator.yaml  get-schema.yaml  github-issue-read.yaml  github-pr-read.yaml  github-repo-read.yaml  grounding-verifier.yaml  lint-check.yaml  list-reference-skills.yaml  memory-reader.yaml  memory-writer.yaml  peer-handoff.yaml  qa-verdict.yaml  query-swarmkit-docs.yaml  read-workspace-file.yaml  run-tests.yaml  search-codebase.yaml  security-scan.yaml  spec-conformance.yaml  summarize-review.yaml  test-coverage-review.yaml  validate-workspace.yaml  write-workspace-file.yaml
reference/topologies/: code-review.yaml  skill-authoring.yaml
scripts/: codegen_pydantic.py  codegen_verbs.py  demo.tape  demo_codegen.py  demo_fleet_identity.py  demo_protocol_schema.py  demo_schema.py  demo_signed_deploy.py  demo_topology_schema.py  demo_validate.py  e2e.sh  extract_design.py
(+450 files in other folders)
