[project]
name = "swarmkit-workspace"
version = "0.0.0"
description = "SwarmKit monorepo root — not published. See packages/ for distributable projects."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml",
    "types-jsonschema",
    # Pydantic model codegen from the canonical JSON Schemas. See
    # docs/notes/schema-change-discipline.md — generated models live under
    # packages/schema/python/src/swarmkit_schema/models/ and must be
    # regenerated whenever a schema changes (`just schema-codegen`).
    "datamodel-code-generator>=0.26",
]

[tool.uv.workspace]
members = [
    "packages/runtime",
    "packages/schema/python",
    "packages/control-plane",
]

[tool.uv.sources]
swarmkit-runtime = { workspace = true }
swarmkit-schema = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    # Generated pydantic models — codegen'd from JSON Schemas. See
    # design/details/pydantic-codegen.md.
    "packages/schema/python/src/swarmkit_schema/models",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "PLR0913",  # too many args — common in framework code
    "PLR2004",  # magic values — noisy
]

[tool.ruff.lint.per-file-ignores]
# Example apps are intentionally pragmatic/monolithic, not framework code.
# Relax complexity heuristics + the lazy-import rule for them; real quality
# rules (pyflakes, line length, bugbear, simplify) still apply.
"examples/minder/**" = [
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLC0415",  # import outside top-level (intentional lazy / sys.path imports)
    "E501",     # line length — example prompts/strings run long
    "E402",     # module import placement (lazy app wiring)
    "PLW1510",  # subprocess.run without check= (pragmatic scripts)
    "PLW0603",  # global statement (simple module-level singletons)
    "PLW2901",  # loop var reassignment
    "SIM115",   # open without context manager (short-lived scripts)
    "B905",     # zip without strict=
]
# Real code-quality issues (lost exception context, dead variables) are NOT
# relaxed and are fixed in the example code.

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

# AGT v3.x (public preview) doesn't ship py.typed markers yet.
[[tool.mypy.overrides]]
module = ["agent_os.*", "agent_control_plane.*", "agentmesh.*", "agent_sre.*", "google.*", "langgraph.*", "langchain_core.*", "langsmith.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "packages/runtime/tests",
    "packages/schema/python/tests",
    "packages/control-plane/tests",
]
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: tests that call live external APIs (deselected by default)",
]
